[gd_scene load_steps=6 format=3 uid="uid://fwdutf4ko1yy"]

[ext_resource type="StyleBox" uid="uid://dsyrl0kj04g3o" path="res://Resources/style_box_background.tres" id="1_axnqi"]
[ext_resource type="PackedScene" uid="uid://b2lvi6ttgi602" path="res://Scenes/button_1.tscn" id="1_exwmw"]
[ext_resource type="Script" path="res://Scripts/deck_viewer.gd" id="1_m8h1h"]
[ext_resource type="Theme" uid="uid://dswhrloqs04nu" path="res://Resources/theme_main.tres" id="3_pwquk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uppqn"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0, 0, 0, 0.262745)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="DeckViewer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_axnqi")
script = ExtResource("1_m8h1h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pwquk")
theme_override_font_sizes/font_size = 80
text = "Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IslandModeButtons" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ButtonRemaining" parent="VBoxContainer/IslandModeButtons" instance=ExtResource("1_exwmw")]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Remaining"

[node name="ButtonAll" parent="VBoxContainer/IslandModeButtons" instance=ExtResource("1_exwmw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 0)
layout_mode = 2
toggle_mode = true
text = "All"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uppqn")

[node name="TileContainer" type="HFlowContainer" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Button2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_exwmw")]
layout_mode = 2
text = "Close"

[connection signal="toggled" from="VBoxContainer/IslandModeButtons/ButtonRemaining" to="." method="_on_button_remaining_toggled"]
[connection signal="toggled" from="VBoxContainer/IslandModeButtons/ButtonAll" to="." method="_on_button_all_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_close_pressed"]
